app/css/hero-summary.css
.fade-in {
    opacity: 0;
    -webkit-animation: fade-in 0.5s;
    -webkit-animation-fill-mode: forwards;
    animation: fade-in 0.5s;
    animation-fill-mode: forwards;
}

.fade-out {
    opacity: 1;
    -webkit-animation: fade-out 0.5s;
    -webkit-animation-fill-mode: forwards;
    animation: fade-out 0.5s;
    animation-fill-mode: forwards;
}

.hero {
    text-align: left;
}

a.panel {
    position: relative;
    display: block;
    color: inherit;
    height: 330px;
    border: none;
    overflow: hidden;
}

a.panel:hover, a.panel:focus, a.panel:active {
    text-decoration: none;
}

a.panel:hover .overlay, a.panel:focus .overlay, a.panel:active .overlay {
    transform: scaleY(1);
}

a.panel:hover .summary-head, a.panel:focus .summary-head, a.panel:active .summary-head {
    color: #F0F0F0;
    text-shadow: 1px 1px 6px #AFAFAF;
}

.overlay {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background-color: grey;
    transform-origin: 50% 0%;
    transform: scaleY(0.2);
    z-index: 5;
    transition: transform 0.5s;
}

.summary-head {
    height: 60px;
    padding: 16px 6%;
    text-align: center;
    position: relative;
    transition: color 0.5s ease;
}

.summary-body {
    padding: 10px;
    text-align: left;
}

.hero-remove {
    float: right;
    font-size: 20px;
    background-color: rgba(255, 255, 255, .5);
    color: #f7615c;
    transition: all 0.1s ease;
    z-index: 20;
}

.hero-remove::before {
    position: absolute;
    padding: 16px;
    background-image: radial-gradient(#F0F0F0 9px, transparent 1px);
    border-radius: 20px;
    top: -24px;
    right: -24px;
}

.hero-remove:hover {
    font-size: 22px;
    cursor: pointer;
    color: red;
}

.hero-name {
    position: relative;
    text-align: right;
    margin: 0px;
    line-height: 40px;
    font-size: 18px;
    z-index: 10;
}

.hero-icon {
    position: absolute;
    top: 16px;
    left: 6%;
    font-size: 40px;
    z-index: 9;
}

.hero-status {
    text-align: center;
    overflow: visible;
}

.hero-status .glyphicon-alert {
    color: #f7615c;
    font-size: 36px;
    margin-bottom: 8px;
    -webkit-animation: jiggle 1.5s ease-in-out infinite alternate;
    -moz-animation: jiggle 1.5s ease-in-out infinite alternate;
    -o-animation: jiggle 1.5s ease-in-out infinite alternate;
    animation: jiggle 1.5s ease-in-out infinite alternate;
}

.section-label {
    font-weight: 400;
    font-size: 11px;
    margin: 0;
    color: #777;
    text-align: center;
}

.stat-label {
    font-weight: 400;
    margin-top: 12px;
    margin-bottom: 2px;
}

.stat-section {
    margin-bottom: 8px;
}

.stat-bar {
    color: #fff;
    padding: 4px;
    text-align: left;
    background-color: #f99e1a;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    border-radius: 2px;
    width: 100%;
    line-height: 0.7em;
    font-size: 12px;

    -webkit-transition: width 1s ease-in-out;
    -moz-transition: width 1s ease-in-out;
    -o-transition: width 1s ease-in-out;
    transition: width 1s ease-in-out;
    -webkit-animation-name:stat-bar-anim;
    -webkit-animation-duration:2s;
    -webkit-animation-timing-function:ease-out;
}

.stat-section:nth-child(even) .stat-bar {
    background-color: #405275;
}



 /* ----- HERO SELECT ----- */

 .hero-grid .well {
    background-color: rgba(255, 255, 255, .5);
    margin-bottom: 0;
}

.hero-grid {
    margin-bottom: 40px;
}


 /* ----- HERO SELECT MOBILE ----- */

 .btn-group .dropdown-menu {
    padding: 0;
}

.dropdown-menu>.dropdown-menu-container>li:not(:first-child):not(:last-child):not(.dropdown-toggle)>label.btn {
    border-radius: 0;
}

.dropdown-menu>.dropdown-menu-container>li:first-child:not(:last-child):not(.dropdown-toggle)>label.btn {
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
}

.dropdown-menu>.dropdown-menu-container>li:last-child:not(:first-child):not(.dropdown-toggle)>label.btn {
    border-top-right-radius: 0;
    border-top-left-radius: 0;
}




 /* ----- HERO SINGLE VIEW ----- */

.hero-aside {
    max-height: 780px;
}

.hero-img {
    margin-left: auto;
    margin-right: auto;
    width: auto;
    max-height: 780px;
}




 /* ----- ANIMATIONS ----- */

@-webkit-keyframes fade-in {
    100% { opacity: 1; }
}@keyframes fade-in {
    100% { opacity: 1; }
}

@-webkit-keyframes fade-out {
    100% { opacity: 0; }
}@keyframes fade-out {
    100% { opacity: 0; }
}

@-webkit-keyframes jiggle {
    0%, 66%     { -webkit-transform: scale(1); }
    100%        { -webkit-transform: scale(1.1); }
}@-moz-keyframes jiggle {
    0%, 66%     { -moz-transform: scale(1); }
    100%        { -moz-transform: scale(1.1); }
}@-o-keyframes jiggle {
    0%, 66%     { -o-transform: scale(1); }
    100%        { -o-transform: scale(1.1); }
}@keyframes jiggle {
    0%, 66%     { transform: scale(1); }
    100%        { transform: scale(1.1); }
}

@-webkit-keyframes stat-bar-anim {
    0% { width:0%; }
}



/*================
  MEDIA QUERIES
 ===============*/

/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {

    a.panel {
        height: 540px;
    }

    .summary-head {
        height: 220px;
        padding: 30px 20px 0px 20px;
        position: relative;
        transition: color 0.5s ease;
    }

    .hero-name {
        margin-top: 20px;
        margin-left: 0px;
        text-align: center;
        font-size: 30px;
        line-height: 1;
    }

    .hero-icon {
        font-size: 120px;
        text-align: center;
        position: relative;
        top: initial;
        left: initial;
    }

    .overlay {
        transform: scaleY(0.1);
    }

    .stat-bar {
        padding: 4px;
        line-height: 1em;
        font-size: 14px;
    }

}

/* Medium devices (desktops, 992px and up) */
@media (min-width: 992px) {
    
}

/* Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {

}




/* ----- HERO COLORS -----  */

.genji {
    background-color: #bae77a;
}

.mccree {
    background-color: #795c42;
}

.pharah {
    background-color: #1f73c3;
}

.reaper {
    background-color: #5e5c50;
}

.soldier76 {
    background-color: #525d9b;
}

.tracer {
    background-color: #4dfffe;
}

.sombra {
    background-color: #9765de;
}

.bastion {
    background-color: #7a9767;
}

.hanzo {
    background-color: #837c46;
}

.junkrat {
    background-color: #c7712a;
}

.mei {
    background-color: #555576;
}

.torbjorn {
    background-color: #e9d282;
}

.widowmaker {
    background-color: #171939;
}

.dva {
    background-color: #feabe6;
}

.reinhardt {
    background-color: #b9b5ad;
}

.roadhog {
    background-color: #566565;
}

.winston {
    background-color: #e9a92e;
}

.zarya {
    background-color: #5588a2;
}

.orisa {
    background-color: #97ab40;
}

.ana {
    background-color: #6591ee;
}

.lucio {
    background-color: #8de141;
}

.mercy {
    background-color: #fedc57;
}

.symmetra {
    background-color: #3cffff;
}

.zenyatta {
    background-color: #6f241e;
}

